--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 
+  <main>
   <div class="qr-code-container">
     <div id="qr-code-container-image">
       <div class="qr-code-image">
@@ -32,6 +33,8 @@
     Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </div>
   </div>
+  </main>
+
   <!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
